--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam quidem nisi ab quas dignissimos aspernatur nemo, earum iusto accusantium sit quisquam deleniti aperiam culpa magni id fugit delectus, sunt cumque.</p>
         <br><br>
-        <img src="wesual-click-jkC1ul95ujQ-unsplash.jpg" alt="pizza">
+        <img src="img/wesual-click-jkC1ul95ujQ-unsplash.jpg" alt="pizza">
         <p>
             <strong>Opening hours :</strong>
             from 9am to 9 pm
@@ -51,7 +51,7 @@
         <h4> Classic </h4>
         <p>A group of wonderful healthy foods to start your day with an active at <time>7am</time></p>
         <br>
-        <img src="0000_HERO_iStock.jpg" alt="classic">
+        <img src="img/0000_HERO_iStock.jpg" alt="classic">
 
         <br>
         <br>
@@ -62,14 +62,14 @@
         
         <P> Best lunch after a long day !</P>
         <br>
-        <img src="jonathan-borba-8l8Yl2ruUsg-unsplash.jpg" alt="lunch">
+        <img src="img/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg" alt="lunch">
         <br><br>
         <h3>drinks</h3>
         <br>
         <h4> fresh is the best </h4>
         <p>pure blood !</p>
         <br>
-        <img src="brenda-godinez-CrK843Pl9a4-unsplash.jpg" alt="drinks">
+        <img src="img/brenda-godinez-CrK843Pl9a4-unsplash.jpg" alt="drinks">
 
     </section>
 
@@ -81,7 +81,7 @@
         <br>
         <p>find us there!</p>
         <br>
-        <img src="pema-lama-6cfK0SEtpbY-unsplash.jpg" alt="drinks">
+        <img src="img/pema-lama-6cfK0SEtpbY-unsplash.jpg" alt="drinks">
         <br><br>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam deleniti, praesentium repudiandae possimus voluptatum ratione, odio accusantium, repellendus dolorem optio consectetur quam cumque fugit dolor obcaecati deserunt libero. Expedita, sunt.</p>
         <br>
